# pseudo-enum

./: .gitignore  Cargo.toml  README.md  pseudo-enum.toml  requirements.txt  sourcemap.json  test.luau
.github/workflows/: release.yml
scripts/: init.sh  run.sh  test,sh  test.sh  to_exe.sh
src/: __init__.py  build.py  config.py  document.rs  lib.rs  main.rs  model.rs
